Fixed emoji styling on mobile :)

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -130,7 +130,6 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    height: 8rem;
   }
 
   .card_container {
