--- a/src/styles/NavStyles.module.css
+++ b/src/styles/NavStyles.module.css
@@ -26,7 +26,6 @@
   width: max-content;
   cursor: pointer;
   display: inline-block;
-  overflow: visible;
 }
 
 .nav_link:not(:last-child) {
@@ -44,6 +43,8 @@
   color: var(--color-grey-light-1);
   margin-bottom: .2rem;
   transform: translateX(-.5rem);
+  overflow: visible;
+  height: 2rem;
 }
 
 .theme_picker:hover {
@@ -53,6 +54,6 @@
 @media (max-width: 500px) {
   .nav {
     width: 100%;
-    height: 4rem;
+    /* height: 4rem; */
   }
 }
